// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalStyleCss should render defaultTheme without throwing an error 1`] = `
<GlobalStyleCss
  theme={
    Object {
      "aboutMarginTop": "-200px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#FFA726",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#ecf0f1",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "50px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/bg.webp",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/bg-pattern.jpg",
        "bgPatternOpacity": "1",
        "overlay": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABSCAABFVgAADqXAAAXb9daH5AAAAAZSURBVHjaYmCAAGM0GjfHGEMGAAAA//8DACm0ATMe8beGAAAAAElFTkSuQmCC",
        "overlayBgColor": "rgba(44, 62, 80, 0.4)",
        "overlayBgColorMobile": "rgba(44, 62, 80, 0.3)",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
    }
  }
>
  <style>
    
      html,
      body {
        color: #2c3e50;
      }
      h1 {
        color: #ecf0f1;
      }
      a {
        color: #2c3e50;
        border-bottom: 1px dashed #2c3e50;
      }
      body:after {
        content: '';
        position: fixed;
        top: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        opacity: 1;
        z-index: -1;
        background: #fff url(/images/bg-pattern.jpg);
      }
      *:selection {
        color: #ecf0f1;
        background-color: #bdc3c7;
      }
      *::-moz-selection {
        color: #ecf0f1;
        background-color: #bdc3c7;
      }

      @font-face {
        font-family: 'ip';
        src: url('/fonts/ip/font/ip.eot');
        src: url('/fonts/ip/font/ip.eot#iefix') format('embedded-opentype'),
          url('/fonts/ip/font/ip.woff') format('woff'),
          url('/fonts/ip/font/ip.ttf') format('truetype'),
          url('/fonts/ip/font/ip.svg') format('svg');
        font-weight: normal;
        font-style: normal;
      }

      html,
      body,
      div,
      span,
      applet,
      object,
      iframe,
      h1,
      h2,
      h3,
      h4,
      h5,
      h6,
      p,
      blockquote,
      pre,
      a,
      abbr,
      acronym,
      address,
      big,
      cite,
      code,
      del,
      dfn,
      em,
      img,
      ins,
      kbd,
      q,
      s,
      samp,
      small,
      strike,
      strong,
      sub,
      sup,
      tt,
      var,
      b,
      u,
      i,
      center,
      dl,
      dt,
      dd,
      ol,
      ul,
      li,
      fieldset,
      form,
      input,
      label,
      legend,
      table,
      caption,
      tbody,
      tfoot,
      thead,
      tr,
      th,
      td,
      article,
      aside,
      canvas,
      details,
      embed,
      figure,
      figcaption,
      footer,
      header,
      hgroup,
      menu,
      nav,
      output,
      ruby,
      section,
      summary,
      time,
      mark,
      audio,
      video {
        margin: 0;
        padding: 0;
        border: 0;
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
      }

      article,
      aside,
      details,
      figcaption,
      figure,
      footer,
      header,
      hgroup,
      menu,
      nav,
      section {
        display: block;
      }

      nav ol,
      nav ul {
        list-style: none;
      }

      blockquote,
      q {
        quotes: none;
      }

      blockquote cite {
        font-style: normal;
      }

      blockquote:before,
      blockquote:after,
      q:before,
      q:after {
        content: '';
        content: none;
      }

      html,
      body {
        width: 100%;
        height: 100%;
        font-family: 'open sans', Tahoma, Verdana, Arial, sans-serif;
        line-height: 1.2;
        scroll-behavior: smooth;
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: normal;
      }

      h1 {
        font-size: 60px;
        font-family: Georgia, Times, 'Times New Roman', serif;
      }
      @media screen and (max-width: 1200px) {
        h1 {
          font-size: 55px;
        }
      }
      @media screen and (max-width: 800px) {
        h1 {
          font-size: 50px;
        }
      }

      h2 {
        font-family: Georgia, Times, 'Times New Roman', serif;
        font-size: 40px;
      }
      @media screen and (max-width: 1200px) {
        h2 {
          font-size: 35px;
        }
      }
      @media screen and (max-width: 800px) {
        h2 {
          font-size: 30px;
        }
      }

      h3 {
        font-size: 30px;
      }
      @media screen and (max-width: 1200px) {
        h3 {
          font-size: 25px;
        }
      }
      @media screen and (max-width: 800px) {
        h3 {
          font-size: 20px;
        }
      }

      h4 {
        font-size: 20px;
      }
      @media screen and (max-width: 1200px) {
        h4 {
          font-size: 18px;
        }
      }

      h5 {
        font-size: 18px;
      }
      @media screen and (max-width: 800px) {
        h5 {
          font-size: 16px;
        }
      }

      p {
        font-size: 16px;
        line-height: 1.5;
      }
      @media screen and (max-width: 800px) {
        p {
          font-size: 15px;
        }
      }

      li p {
        font-family: Georgia, Times, 'Times New Roman', serif;
        font-style: italic;
      }

      a {
        font-family: 'open sans', Tahoma, Verdana, Arial, sans-serif;
        font-size: 16px;
        text-decoration: none;
        outline-style: none;
      }
      a:hover {
        border-bottom: none;
      }
    
  </style>
</GlobalStyleCss>
`;

exports[`GlobalStyleCss should render newyearTheme without throwing an error 1`] = `
<GlobalStyleCss
  theme={
    Object {
      "aboutMarginTop": "-115px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#F0B14A",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#ecf0f1",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "50px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/newyear/bg-newyear.jpg",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/newyear/bg-pattern.jpg",
        "bgPatternOpacity": "0.3",
        "overlay": "",
        "overlayBgColor": "rgba(44, 62, 80, 0.3)",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
      "titleBgColor": "rgba(44, 25, 0, 0.6)",
    }
  }
>
  <style>
    
      html,
      body {
        color: #2c3e50;
      }
      h1 {
        color: #ecf0f1;
      }
      a {
        color: #2c3e50;
        border-bottom: 1px dashed #2c3e50;
      }
      body:after {
        content: '';
        position: fixed;
        top: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        opacity: 0.3;
        z-index: -1;
        background: #fff url(/images/newyear/bg-pattern.jpg);
      }
      *:selection {
        color: #ecf0f1;
        background-color: #bdc3c7;
      }
      *::-moz-selection {
        color: #ecf0f1;
        background-color: #bdc3c7;
      }

      @font-face {
        font-family: 'ip';
        src: url('/fonts/ip/font/ip.eot');
        src: url('/fonts/ip/font/ip.eot#iefix') format('embedded-opentype'),
          url('/fonts/ip/font/ip.woff') format('woff'),
          url('/fonts/ip/font/ip.ttf') format('truetype'),
          url('/fonts/ip/font/ip.svg') format('svg');
        font-weight: normal;
        font-style: normal;
      }

      html,
      body,
      div,
      span,
      applet,
      object,
      iframe,
      h1,
      h2,
      h3,
      h4,
      h5,
      h6,
      p,
      blockquote,
      pre,
      a,
      abbr,
      acronym,
      address,
      big,
      cite,
      code,
      del,
      dfn,
      em,
      img,
      ins,
      kbd,
      q,
      s,
      samp,
      small,
      strike,
      strong,
      sub,
      sup,
      tt,
      var,
      b,
      u,
      i,
      center,
      dl,
      dt,
      dd,
      ol,
      ul,
      li,
      fieldset,
      form,
      input,
      label,
      legend,
      table,
      caption,
      tbody,
      tfoot,
      thead,
      tr,
      th,
      td,
      article,
      aside,
      canvas,
      details,
      embed,
      figure,
      figcaption,
      footer,
      header,
      hgroup,
      menu,
      nav,
      output,
      ruby,
      section,
      summary,
      time,
      mark,
      audio,
      video {
        margin: 0;
        padding: 0;
        border: 0;
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
      }

      article,
      aside,
      details,
      figcaption,
      figure,
      footer,
      header,
      hgroup,
      menu,
      nav,
      section {
        display: block;
      }

      nav ol,
      nav ul {
        list-style: none;
      }

      blockquote,
      q {
        quotes: none;
      }

      blockquote cite {
        font-style: normal;
      }

      blockquote:before,
      blockquote:after,
      q:before,
      q:after {
        content: '';
        content: none;
      }

      html,
      body {
        width: 100%;
        height: 100%;
        font-family: 'open sans', Tahoma, Verdana, Arial, sans-serif;
        line-height: 1.2;
        scroll-behavior: smooth;
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: normal;
      }

      h1 {
        font-size: 60px;
        font-family: Georgia, Times, 'Times New Roman', serif;
      }
      @media screen and (max-width: 1200px) {
        h1 {
          font-size: 55px;
        }
      }
      @media screen and (max-width: 800px) {
        h1 {
          font-size: 50px;
        }
      }

      h2 {
        font-family: Georgia, Times, 'Times New Roman', serif;
        font-size: 40px;
      }
      @media screen and (max-width: 1200px) {
        h2 {
          font-size: 35px;
        }
      }
      @media screen and (max-width: 800px) {
        h2 {
          font-size: 30px;
        }
      }

      h3 {
        font-size: 30px;
      }
      @media screen and (max-width: 1200px) {
        h3 {
          font-size: 25px;
        }
      }
      @media screen and (max-width: 800px) {
        h3 {
          font-size: 20px;
        }
      }

      h4 {
        font-size: 20px;
      }
      @media screen and (max-width: 1200px) {
        h4 {
          font-size: 18px;
        }
      }

      h5 {
        font-size: 18px;
      }
      @media screen and (max-width: 800px) {
        h5 {
          font-size: 16px;
        }
      }

      p {
        font-size: 16px;
        line-height: 1.5;
      }
      @media screen and (max-width: 800px) {
        p {
          font-size: 15px;
        }
      }

      li p {
        font-family: Georgia, Times, 'Times New Roman', serif;
        font-style: italic;
      }

      a {
        font-family: 'open sans', Tahoma, Verdana, Arial, sans-serif;
        font-size: 16px;
        text-decoration: none;
        outline-style: none;
      }
      a:hover {
        border-bottom: none;
      }
    
  </style>
</GlobalStyleCss>
`;

exports[`GlobalStyleCss should render xmasTheme without throwing an error 1`] = `
<GlobalStyleCss
  theme={
    Object {
      "aboutMarginTop": "-200px",
      "colors": Object {
        "bgColor": "#fff",
        "colorAccent": "#ff8484",
        "colorBlack": "#000000",
        "colorDark": "#2c3e50",
        "colorDarken": "#bdc3c7",
        "colorLight": "#ecf0f1",
        "ghostWhite": "#f8f8ff ",
        "grey": "#696969",
      },
      "defaultLineHeight": 1.57,
      "extra": Object {
        "boxShadow": "0 1px 2px -1px #2c3e50",
      },
      "font": "-apple-system, blinkmacsystemfont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif",
      "fontSizes": Object {
        "L": "16px",
        "M": "14px",
        "S": "12px",
        "XL": "18px",
        "XS": "10px",
        "XXL": "22px",
        "XXXL": "24px",
        "base": "14px",
      },
      "fonts": Object {
        "fontCert": "Times, serif",
        "fontCondensed": "\\"Open Sans Condensed\\", Tahoma, Verdana, Arial, sans-serif",
        "fontIp": "\\"ip\\", sans-serif",
        "fontSans": "\\"Open Sans\\", Tahoma, Verdana, Arial, sans-serif",
        "fontSerif": "Georgia, Times, \\"Times New Roman\\", serif",
        "fontTrebuchet": "Trebuchet MS, sans-serif",
      },
      "footerHeight": "50px",
      "headerPadding": "200px 10px 250px",
      "icons": Object {
        "c": "C",
        "fb": "\\\\e811",
        "goTop": "\\\\e817",
        "link": "\\\\e819",
        "linkedin": "\\\\e815",
        "location": "\\\\e806",
        "mail": "\\\\e800",
        "p": "P",
        "phone": "\\\\e81a",
        "workexp": "\\\\e804",
      },
      "images": Object {
        "background": "/images/christmas/bg-christmas.jpg",
        "backgroundMobile": "/images/bg-mobile.webp",
        "bgPattern": "/images/christmas/bg-pattern-snow.png",
        "bgPatternOpacity": "0.25",
        "overlay": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAACXBIWXMAAAsTAAALEwEAmpwYAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABSCAABFVgAADqXAAAXb9daH5AAAAAZSURBVHjaYmCAAGM0GjfHGEMGAAAA//8DACm0ATMe8beGAAAAAElFTkSuQmCC",
        "overlayBgColor": "rgba(44, 62, 80, 0.3)",
      },
      "navContentMinHeight": "80px",
      "navHeaderHeight": "40px",
      "navHeightWhenScrollingOnMobile": "45px",
      "navPosWhenHiding": "-220px",
      "productImageRatio": "143%",
      "spaces": Object {
        "gutter": 16,
        "large": 35,
        "medium": 25,
        "small": 16,
        "xlarge": 45,
        "xsmall": 13,
        "xxsmall": 10,
        "xxxsmall": 7,
      },
    }
  }
>
  <style>
    
      html,
      body {
        color: #2c3e50;
      }
      h1 {
        color: #ecf0f1;
      }
      a {
        color: #2c3e50;
        border-bottom: 1px dashed #2c3e50;
      }
      body:after {
        content: '';
        position: fixed;
        top: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        opacity: 0.25;
        z-index: -1;
        background: #fff url(/images/christmas/bg-pattern-snow.png);
      }
      *:selection {
        color: #ecf0f1;
        background-color: #bdc3c7;
      }
      *::-moz-selection {
        color: #ecf0f1;
        background-color: #bdc3c7;
      }

      @font-face {
        font-family: 'ip';
        src: url('/fonts/ip/font/ip.eot');
        src: url('/fonts/ip/font/ip.eot#iefix') format('embedded-opentype'),
          url('/fonts/ip/font/ip.woff') format('woff'),
          url('/fonts/ip/font/ip.ttf') format('truetype'),
          url('/fonts/ip/font/ip.svg') format('svg');
        font-weight: normal;
        font-style: normal;
      }

      html,
      body,
      div,
      span,
      applet,
      object,
      iframe,
      h1,
      h2,
      h3,
      h4,
      h5,
      h6,
      p,
      blockquote,
      pre,
      a,
      abbr,
      acronym,
      address,
      big,
      cite,
      code,
      del,
      dfn,
      em,
      img,
      ins,
      kbd,
      q,
      s,
      samp,
      small,
      strike,
      strong,
      sub,
      sup,
      tt,
      var,
      b,
      u,
      i,
      center,
      dl,
      dt,
      dd,
      ol,
      ul,
      li,
      fieldset,
      form,
      input,
      label,
      legend,
      table,
      caption,
      tbody,
      tfoot,
      thead,
      tr,
      th,
      td,
      article,
      aside,
      canvas,
      details,
      embed,
      figure,
      figcaption,
      footer,
      header,
      hgroup,
      menu,
      nav,
      output,
      ruby,
      section,
      summary,
      time,
      mark,
      audio,
      video {
        margin: 0;
        padding: 0;
        border: 0;
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
      }

      article,
      aside,
      details,
      figcaption,
      figure,
      footer,
      header,
      hgroup,
      menu,
      nav,
      section {
        display: block;
      }

      nav ol,
      nav ul {
        list-style: none;
      }

      blockquote,
      q {
        quotes: none;
      }

      blockquote cite {
        font-style: normal;
      }

      blockquote:before,
      blockquote:after,
      q:before,
      q:after {
        content: '';
        content: none;
      }

      html,
      body {
        width: 100%;
        height: 100%;
        font-family: 'open sans', Tahoma, Verdana, Arial, sans-serif;
        line-height: 1.2;
        scroll-behavior: smooth;
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: normal;
      }

      h1 {
        font-size: 60px;
        font-family: Georgia, Times, 'Times New Roman', serif;
      }
      @media screen and (max-width: 1200px) {
        h1 {
          font-size: 55px;
        }
      }
      @media screen and (max-width: 800px) {
        h1 {
          font-size: 50px;
        }
      }

      h2 {
        font-family: Georgia, Times, 'Times New Roman', serif;
        font-size: 40px;
      }
      @media screen and (max-width: 1200px) {
        h2 {
          font-size: 35px;
        }
      }
      @media screen and (max-width: 800px) {
        h2 {
          font-size: 30px;
        }
      }

      h3 {
        font-size: 30px;
      }
      @media screen and (max-width: 1200px) {
        h3 {
          font-size: 25px;
        }
      }
      @media screen and (max-width: 800px) {
        h3 {
          font-size: 20px;
        }
      }

      h4 {
        font-size: 20px;
      }
      @media screen and (max-width: 1200px) {
        h4 {
          font-size: 18px;
        }
      }

      h5 {
        font-size: 18px;
      }
      @media screen and (max-width: 800px) {
        h5 {
          font-size: 16px;
        }
      }

      p {
        font-size: 16px;
        line-height: 1.5;
      }
      @media screen and (max-width: 800px) {
        p {
          font-size: 15px;
        }
      }

      li p {
        font-family: Georgia, Times, 'Times New Roman', serif;
        font-style: italic;
      }

      a {
        font-family: 'open sans', Tahoma, Verdana, Arial, sans-serif;
        font-size: 16px;
        text-decoration: none;
        outline-style: none;
      }
      a:hover {
        border-bottom: none;
      }
    
  </style>
</GlobalStyleCss>
`;
